--- a/udemy_lecture_notes/14-Cluster-Hardening-Retrict-API-Access/14.2-PRACTICE-Insecure-Access.md
+++ b/udemy_lecture_notes/14-Cluster-Hardening-Retrict-API-Access/14.2-PRACTICE-Insecure-Access.md
@@ -3,52 +3,55 @@
 curl https://raw.githubusercontent.com/KojoRising/CKA_Prep/main/abbreviated_alias.sh > alias.sh && source alias.sh
 ```
 
-#### 1)
+## NOTE 
+- Since k8s 1.20 - This argument is no longer present
+
+1)
 ```yaml
 
 ```
 
-#### 2) 
+2) 
 ```yaml
 
 ```
 
-#### 3)
+3)
 ```yaml
 
 ```
 
-#### 4)
+4)
 ```yaml
 
 ```
 
-#### 5)
+5)
 ```yaml
 
 ```
 
-#### 6)
+6)
 ```yaml
 
 ```
 
-#### 7)
+7)
 ```yaml
 
 ```
 
-#### 8)
+8)
 ```yaml
 
 ```
 
-#### 9)
+9)
 ```yaml
 
 ```
 
-#### 10)
+10)
 ```yaml
 
 ```
