Finished up to Ch. 17

--- a/udemy_lecture_notes/14-Cluster-Hardening-Retrict-API-Access/14.0-Cluster-Hardening-Restrict-API-Access.md
+++ b/udemy_lecture_notes/14-Cluster-Hardening-Retrict-API-Access/14.0-Cluster-Hardening-Restrict-API-Access.md
@@ -37,7 +37,7 @@ k8s API Requests - Tied to one of the following:
 - True. No, because RBAC/ABAC require explicit authorization anyways
 
 2) How can you get a certificate from the kubeconfig using `kubectl config view`?
-- Use "--raw flag"
+- Use "--raw flag"A
 
 3) When trying to hit the API Server, what certs/keys do you need from the KubeConfig [3]?
 - certificate-authority-data, client-certificate-data, client-key-data
