--- a/udemy_lecture_notes/16-Update-Kubernetes/16.0-Update-Kubernetes.md
+++ b/udemy_lecture_notes/16-Update-Kubernetes/16.0-Update-Kubernetes.md
@@ -30,6 +30,24 @@
 1) What are the main sets of components that must be upgraded during a cluster upgrade?
 - Kubectl, Critical (API-Server, CM, Scheduler), Extra (Kubelet, Kube-Proxy) 
 
-2) 
+2) What are the control plane upgrade's primary steps [6]?
+> a) Drain ControlPlane
+> b) Upgrade/Install Kubeadm
+> c) Upgrade ControlPlane
+> d) Upgrade Kubectl/Kubelet
+> e) Restart Kubelet
+> f) Uncordon Controlplane
 
-3) 
+3) What are the worker upgrade's primary steps [6]?
+> a) Drain Worker
+> b) Upgrade/Install Kubeadm
+> c) Upgrade Node
+> d) Upgrade Kubectl/Kubelet
+> e) Restart Kubelet
+> f) Uncordon Worker
+
+4) How do you update the kube-proxy version (trick question)?
+- Update Kubelet (Kube-Proxy)
+
+5) Can you upgrade a Worker Node from the Control Plane Node? 
+- NO. Have to SSH into Worker
