--- a/udemy_lecture_notes/16-Update-Kubernetes/16.1-16.3-Update-Controlplane-Worker-Node.md
+++ b/udemy_lecture_notes/16-Update-Kubernetes/16.1-16.3-Update-Controlplane-Worker-Node.md
@@ -222,30 +222,32 @@ Sep 01 19:01:29 controlplane kubelet[62790]: E0901 19:01:29.591766   62790 confi
 Sep 01 19:01:29 controlplane kubelet[62790]: E0901 19:01:29.592488   62790 nestedpendingoperations.go:335] Operation for "{volumeName:kubernetes.io/conf>
 Sep 01 19:01:29 controlplane kubelet[62790]: E0901 19:01:29.593337   62790 configmap.go:197] Couldn't get configMap kube-system/canal-config: failed to >
 Sep 01 19:01:29 controlplane kubelet[62790]: E0901 19:01:29.593768   62790 nestedpendingoperations.go:335] Operation for "{volumeName:kubernetes.io/conf>
-\
-```
 
-#### 6)
+```
+## Upgrade Node
+
+
+#### 1) Update Kubeadm and run `kubeadm upgrade node` // Only Upgrades node you are currently on
 ```yaml
 
 ```
 
-#### 7)
+#### 2)
 ```yaml
 
 ```
 
-#### 8)
+#### 3)
 ```yaml
 
 ```
 
-#### 9)
+#### 4)
 ```yaml
 
 ```
 
-#### 10)
+#### 5)
 ```yaml
 
 ```
