Finished up to 23 - Static Analysis Workloads

--- a/udemy_lecture_notes/21-Open-Policy-Agent/21.0-Open-Policy-Agent.md
+++ b/udemy_lecture_notes/21-Open-Policy-Agent/21.0-Open-Policy-Agent.md
@@ -45,7 +45,10 @@ https://kubernetes.io/docs/reference/access-authn-authz/admission-controllers/
 
 ## 5
 
-## Questions 
+## Questions
+- https://dustinspecker.com/posts/open-policy-agent-introduction-gatekeeper/
+- 
+
 1) What type of Webhooks are available [2] What's the primary difference between the two?
 - Mutating, Validating. Mutating can modify incoming objects, validating cannot. 
 
@@ -61,3 +64,24 @@ https://kubernetes.io/docs/reference/access-authn-authz/admission-controllers/
 
 5) Where are conditions defined in ConstraintTemplates (Definition path)?
 - spec.targets[].target.rego
+
+6) What are some ConstraintTemplate gotchas [3]?
+- name of ConstraintName must be the lowercase name of spec.crd.spec.names.kind
+- target must be admission.k8s.gatekeeper.sh
+- targets list may only have one target
+- if ConstraintTemplate has invalid rego, the ConstraintTemplate’s status shows build errors
+
+7) Constraint - Important Fields? 
+- `spec.enforcementAction` - { dryrun, deny } // deny stops action, dryrun allows
+- `spec.parameters` - Arbitrary (can be anything)
+- `spec.match.kinds[]` - kind + apiGroups
+```yaml
+spec:
+  enforcementAction: dryrun
+  match:
+    kinds:
+      - apiGroups: [""]
+        kinds: ["Pod"]
+```
+
+8) 
