--- a/udemy_lecture_notes/21-Open-Policy-Agent/21.2-Open-Policy-Agent.md
+++ b/udemy_lecture_notes/21-Open-Policy-Agent/21.2-Open-Policy-Agent.md
@@ -2,16 +2,23 @@
 ```yaml
 curl https://raw.githubusercontent.com/KojoRising/CKA_Prep/main/abbreviated_alias.sh > alias.sh && source alias.sh
 ```
-
-#### 1)
+#### 1) Create Constraint
 ```yaml
+controlplane $ kc -f https://raw.githubusercontent.com/killer-sh/cks-course-environment/master/course-content/opa/namespace-labels/k8srequiredlabels_template.yaml\
 
+controlplane $ kc -f https://raw.githubusercontent.com/killer-sh/cks-course-environment/master/course-content/opa/namespace-labels/all_ns_must_have_cks.yaml
+k8srequiredlabels.constraints.gatekeeper.sh/ns-must-have-cks created
 ```
 
-#### 2) 
+#### 2) Test it Out
 ```yaml
-
+controlplane $ kc ns hello
+Error from server ([ns-must-have-cks] you must provide labels: {"cks"}): admission webhook "validation.gatekeeper.sh" denied the request: [ns-must-have-cks] you must provide labels: {"cks"}
 ```
+
+
+## Deploy 
+
 
 #### 3)
 ```yaml
