Finished up to half of Ch. 25. Falco Practice

--- a/udemy_lecture_notes/20-Open-Policy-Agent/21.0-Open-Policy-Agent.md
+++ b/udemy_lecture_notes/20-Open-Policy-Agent/21.0-Open-Policy-Agent.md
@@ -65,6 +65,9 @@ https://kubernetes.io/docs/reference/access-authn-authz/admission-controllers/
 5) Where are conditions defined in ConstraintTemplates (Definition path)?
 - spec.targets[].target.rego
 
+6) How can you check for # of violations for a specific Constraint?
+- "kubectl describe CONSTRAINT | grep Violation"
+
 6) What are some ConstraintTemplate gotchas [3]?
 - name of ConstraintName must be the lowercase name of spec.crd.spec.names.kind
 - target must be admission.k8s.gatekeeper.sh
