Adding other missing files

--- a/udemy_lecture_notes/20-Open-Policy-Agent/21.0-Open-Policy-Agent.md
+++ b/udemy_lecture_notes/20-Open-Policy-Agent/21.0-Open-Policy-Agent.md
@@ -87,4 +87,16 @@ spec:
         kinds: ["Pod"]
 ```
 
-8) 
+## OPA ERROR CHECKING
+
+8) For ConstraintTemplate, what 3 things should match?
+  - metadata.name == spec.targets.rego.package == lowercase(spec.crd.spec.names.kind)
+
+
+9) In the rego, what should the validation rule name be, and what should it not be? 
+  - "violation", not "deny". 
+    https://stackoverflow.com/questions/67391066/why-is-the-exact-difference-between-violation-and-deny-in-opa-rego
+    https://github.com/open-policy-agent/gatekeeper/issues/1168
+
+10) If you encounter the following, "Could not ingest Rego: 1 error occurred..._idx_0:6: rego_unsafe_var_error: expression is unsafe", what might be the issue? 
+  -  "msg := " should container some variable ("%v"")
