--- a/udemy_lecture_notes/24-SupplyChainSecurity-SecureSupplyChain/24.0-SupplyChainSecurity-SecureSupplyChain.md
+++ b/udemy_lecture_notes/24-SupplyChainSecurity-SecureSupplyChain/24.0-SupplyChainSecurity-SecureSupplyChain.md
@@ -32,3 +32,15 @@
 3) What does the `defaultAllow` flag specify for the `ImagePolicyWebhook`?
 - If the external service is unavailable, deny all pod creation
 
+4) What files are involved in ImagePolicyWebhook and what does each one do [2]?
+- /etc/kubernetes/policywebhook/
+  - admission_config.json - Configure kubeconf, defaultAllow, etc.
+  - kubeconf - External Service address
+  
+5) ImagePolicyWebhook. Where can you configure the address of the external service? 
+  - /etc/kubernetes/policywebhook/kubeconf - "clusters.server"
+
+6) What's the format for images with digest? How can you get an images digest?
+  - docker pull IMG && docker images --digests IMG
+  - IMG@sha256:xxxxx
+
