--- a/udemy_lecture_notes/25-BehavioralAnalytics/25.0-BehavioralAnalytics.md
+++ b/udemy_lecture_notes/25-BehavioralAnalytics/25.0-BehavioralAnalytics.md
@@ -52,5 +52,6 @@ Syscalls - Can be made directly by apps, but more commonly by libraries
 5) For troubleshooting Falco, what should you ensure regarding pods?
 - Ensure Falco is running/installed on the same node as the running pod. 
 
-6) Where are Falco rules stored?
+6) Where are Falco rules stored? What can you use to override current Falco Rules?
 - `/etc/falco/falco_rules.yaml`
+- `/etc/falco/falco_rules.local.yaml`
