--- a/udemy_lecture_notes/25-BehavioralAnalytics/25.1-BehavioralAnalytics.md
+++ b/udemy_lecture_notes/25-BehavioralAnalytics/25.1-BehavioralAnalytics.md
@@ -36,9 +36,11 @@ KUBERNETES_SERVICE_PORT_HTTPS=443KUBERNETES_SERVICE_HOST=10.96.0.1PWD=/usr/local
 node01 $ 
 ```
 
+## Shell Was Spawned error
+
 #### 4)
 ```yaml
-
+6:08:59.733530043: Notice A shell was spawned in a container with an attached terminal (user=root user_loginuid=-1 apache (id=bc04df8fef78) shell=bash parent=runc cmdline=bash terminal=34816 container_id=bc04df8fef78 image=docker.io/library/httpd)
 ```
 
 #### 5)
