--- a/udemy_lecture_notes/25-BehavioralAnalytics/25.2-Falco.md
+++ b/udemy_lecture_notes/25-BehavioralAnalytics/25.2-Falco.md
@@ -6,8 +6,7 @@ curl https://raw.githubusercontent.com/KojoRising/CKA_Prep/main/abbreviated_alia
 #### 1) Install Falco
 ```yaml
 curl -o install_falco -s https://falco.org/script/install
-chmod +rwx install_falco
-./install_falco
+chmod +rwx install_falco && ./install_falco
 ```
 
 #### 2) Example Falco Output
@@ -19,13 +18,31 @@ chmod +rwx install_falco
 18:38:42.075286966: Notice A shell was spawned in a container with an attached terminal (user=root user_loginuid=-1 apache (id=db93ba4cfbda) shell=bash parent=runc cmdline=bash terminal=34816 container_id=db93ba4cfbda image=docker.io/library/httpd)
 ```
 
-#### 3) Check Falco Rules
+#### 3) Copy your falco rule and change priority to WARNING (From Notice).
 ```yaml
+grep -r "A shell was spawned in a container with an attached terminal"
 
+- rule: Terminal shell in container
+  desc: A shell was used as the entrypoint/exec point into a container with an attached terminal.
+  condition: >
+    spawned_process and container
+    and shell_procs and proc.tty != 0
+    and container_entrypoint
+    and not user_expected_terminal_shell_in_container_conditions
+  output: >
+    A shell was spawned in a container with an attached terminal (user=%user.name user_loginuid=%user.loginuid %container.info
+    shell=%proc.name parent=%proc.pname cmdline=%proc.cmdline terminal=%proc.tty container_id=%container.id image=%container.image.repository)
+  priority: WARNING
+  tags: [container, shell, mitre_execution]
 ```
 
-#### 4)
+#### 4) Observe the Falco Rules Changing
 ```yaml
+ed Sep 14 16:29:00 2022: Falco version 0.32.2
+Wed Sep 14 16:29:00 2022: Falco initialized with configuration file /etc/falco/falco.yaml
+Wed Sep 14 16:29:00 2022: Loading rules from file /etc/falco/falco_rules.yaml:
+Wed Sep 14 16:29:01 2022: Loading rules from file /etc/falco/falco_rules.local.yaml:
+Wed Sep 14 16:29:01 2022: Starting internal webserver, listening on port 8765
 
 ```
 
