--- a/udemy_lecture_notes/26-Immutable-Runtime-Containers/26.0-Immutable-Runtime-Containers.md
+++ b/udemy_lecture_notes/26-Immutable-Runtime-Containers/26.0-Immutable-Runtime-Containers.md
@@ -1,18 +1,54 @@
 # Introduction/Overview
 
-1) 
-2)
-3) 
-4)
-5)
+1) Immutability
+2) Container/Pod Level Enforcement
+3) Scenarios to ensure Pod's Containers are immutable
 
+## 1 Immutability
+- Container - Won't be modified in its lifetime
 
-## 1
+### Update Container Application Example - Mutable vs Immutable
 
-## 2
+#### 1 Mutable
+1. Exec into container instance
+2. Stop Application
+3. Update Application
+4. Start Application
+
+#### 2 Immutable
+1. Create new Container Image
+2. Delete Container Instance
+3. Create new Container Instance
+
+### Immutability Benefits
+1) Advanced Deployment Methods
+2) Easy Rollback
+3) More Reliability
+4) Better Container-Level Security 
+
+***==> We always know the state***
+
+## 2 Enforce Container Level Immutability
+
+### 1 Docker-Level Options
+1) Remove bash/shell
+2) Make filesystem read-only
+3) Run as user/non-root
+
+### 2 k8s-Level Options
+1) Startup Commands - `chmod a-w -R / && nginx` // Remove writable perms from container
+2) Startup Probe - Runs `chmod a-w -R / `
+3) Init Container 
 
 ## 3
 
 ## 4
 
 ## 5
+
+## QUESTIONS
+1) Security Strategies for Pods outside of SecurityContexts/PSP's [3]?
+- Startup Commands/Probes - Can remove write perms, for example. Init Containers
+
+2) POD-STRATEGY. How do you have a RO-Filesystem while having some folders be writable?
+- securityContext.readOnlyFileSystem + emptyDir VolumeMount for writable directories.
