--- a/udemy_lecture_notes/26-Immutable-Runtime-Containers/26.1-Immutable-Runtime-Containers.md
+++ b/udemy_lecture_notes/26-Immutable-Runtime-Containers/26.1-Immutable-Runtime-Containers.md
@@ -1,11 +1,63 @@
-# PRACTICE/OVERVIEW
+90# PRACTICE/OVERVIEW
 ```yaml
 curl https://raw.githubusercontent.com/KojoRising/CKA_Prep/main/abbreviated_alias.sh > alias.sh && source alias.sh
 ```
 
+## 1 Remove 'Touch' from a Pod 
+
 #### 1)
 ```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: immutable
+  name: immutable
+spec:
+  containers:
+  - image: httpd
+    name: immutable
+    resources: {}
+    startupProbe:
+      exec: 
+        command:
+        - rm 
+        - /bin/touch
+      initialDelaySeconds: 1
+      periodSeconds: 5
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+status: {}
+```
 
+## 2 SecurityContext renders Pod Immutable 
+
+#### 1) 
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: immutable
+  name: immutable
+spec:
+  volumes:
+    - name: cache-volume
+      emptyDir: {}
+  containers:
+  - image: httpd
+    name: immutable
+    resources: {}
+    securityContext:
+      readOnlyRootFilesystem: true
+    volumeMounts:
+      - mountPath: /usr/local/apache2/logs
+        name: cache-volume
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+status: {}
 ```
 
 #### 2) 
