--- a/udemy_lecture_notes/27-RuntimeSecurity-AuditLogs/27.0-RuntimeSecurity-AuditLogs.md
+++ b/udemy_lecture_notes/27-RuntimeSecurity-AuditLogs/27.0-RuntimeSecurity-AuditLogs.md
@@ -1,18 +1,131 @@
 # Introduction/Overview
 
-1) 
-2)
-3) 
-4)
-5)
+1) Intro
+2) Setup/Configure Audit Logs
+3) Use Audit Logs - To Investigate Access History
 
+## 1 Intro
 
-## 1
+Audit Logs - History of API Requests
 
-## 2
+- Did some access an important secret while it wasn't protected
+- When was the last time user X did not access cluster Y?
+- Does my CRD work properly?
 
-## 3
+## 2 API Request Stages
+https://kubernetes.io/docs/tasks/debug/debug-cluster/audit/
+1) RequestReceived - The stage for events generated as soon as the audit handler receives the request, and before it is delegated down the handler chain.
+2) ResponseStarted - Once the response headers are sent, but before the response body is sent. This stage is only generated for long-running requests (e.g. watch).
+3) ResponseComplete - The response body has been completed and no more bytes will be sent.
+4) Panic - Events generated when a panic occurred.
 
-## 4
+## 3 Audit Logging Levels
+
+1) None - don't log events that match this rule.
+2) Metadata - log request metadata (requesting user, timestamp, resource, verb, etc.) but not request or response body.
+3) Request - log event metadata and request body but not response body. This does not apply for non-resource requests.
+4) RequestResponse - log event metadata, request and response bodies. This does not apply for non-resource requests.
+
+## 4 Sample Audit Policy
+
+```yaml
+apiVersion: audit.k8s.io/v1 # This is required.
+kind: Policy
+# Don't generate audit events for all requests in RequestReceived stage.
+omitStages:
+  - "RequestReceived"
+rules:
+  # Log pod changes at RequestResponse level
+  - level: RequestResponse
+    resources:
+    - group: ""
+      # Resource "pods" doesn't match requests to any subresource of pods,
+      # which is consistent with the RBAC policy.
+      resources: ["pods"]
+  # Log "pods/log", "pods/status" at Metadata level
+  - level: Metadata
+    resources:
+    - group: ""
+      resources: ["pods/log", "pods/status"]
+
+  # Don't log requests to a configmap called "controller-leader"
+  - level: None
+    resources:
+    - group: ""
+      resources: ["configmaps"]
+      resourceNames: ["controller-leader"]
+
+  # Don't log watch requests by the "system:kube-proxy" on endpoints or services
+  - level: None
+    users: ["system:kube-proxy"]
+    verbs: ["watch"]
+    resources:
+    - group: "" # core API group
+      resources: ["endpoints", "services"]
+
+  # Don't log authenticated requests to certain non-resource URL paths.
+  - level: None
+    userGroups: ["system:authenticated"]
+    nonResourceURLs:
+    - "/api*" # Wildcard matching.
+    - "/version"
+
+  # Log the request body of configmap changes in kube-system.
+  - level: Request
+    resources:
+    - group: "" # core API group
+      resources: ["configmaps"]
+    # This rule only applies to resources in the "kube-system" namespace.
+    # The empty string "" can be used to select non-namespaced resources.
+    namespaces: ["kube-system"]
+
+  # Log configmap and secret changes in all other namespaces at the Metadata level.
+  - level: Metadata
+    resources:
+    - group: "" # core API group
+      resources: ["secrets", "configmaps"]
+
+  # Log all other resources in core and extensions at the Request level.
+  - level: Request
+    resources:
+    - group: "" # core API group
+    - group: "extensions" # Version of group should NOT be included.
+
+  # A catch-all rule to log all other requests at the Metadata level.
+  - level: Metadata
+    # Long-running requests like watches that fall under this rule will not
+    # generate an audit event in RequestReceived.
+    omitStages:
+      - "RequestReceived"
+
+```
 
 ## 5
+
+## Questions
+1) What stages are available when a request registers with API-Server [4]?
+- RequestReceived, ResponseStarted, ResponseComplete, Panic
+
+2) What levels are available for Audit Logging Levels [4]?
+- None, Metadata, Request, RequestResponse
+
+3) Where can Audit Logs be stored [3]?
+- Log (JSON Files), Webhook (External API, ie. ElasticSearch, Fluentd), Dynamic backend (AuditSink API)
+
+4) For an Auditing Policy Object, how do you...
+- Skip a stage?
+  - policy.omitStages[]
+- Specify a resource for a certain Level?
+  - policy.rules.level.resources
+
+5) Can you specify multiple rules for the same level? (ie. multiple rules for "None")?
+- Yes
+
+6) Can you skip/include a resource by name? If so, how?
+- policy.rules.level.resources.resourceNames
+
+5) What flag do you need to add for the Kube-APIServer?
+- --audit-policy-file=FILE
+- --audit-policy-file=/etc/kubernetes/audit/policy.yaml
+
+6) NOTE - 
