Finished Practice Test && adding Audit-Logged Kube-APIServer

--- a/udemy_lecture_notes/25-BehavioralAnalytics/25.0-BehavioralAnalytics.md
+++ b/udemy_lecture_notes/25-BehavioralAnalytics/25.0-BehavioralAnalytics.md
@@ -55,3 +55,11 @@ Syscalls - Can be made directly by apps, but more commonly by libraries
 6) Where are Falco rules stored? What can you use to override current Falco Rules?
 - `/etc/falco/falco_rules.yaml`
 - `/etc/falco/falco_rules.local.yaml`
+
+7) How can you get the strace for a certain command? How can you pipe `strace` output?
+  strace [COMAND] 2&>1. ie. `strace kill -9 1234`
+   
+8) Where does falco typically log its output? Command to verify a falco rule that logged?
+- /var/log/syslog
+- cat /var/log/syslog | grep falco | grep "RULE-OUTPUT" 
+ 
